--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,13 @@
     "require": {
         "statamic/cms": "~3.3"
     },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.13"
+    },
+    "scripts": {
+        "phpcs": "vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.php --allow-risky=\"yes\" --dry-run --verbose --diff",
+        "phpcs-fix": "vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.php --allow-risky=\"yes\""
+    },
     "autoload": {
         "psr-4": {
             "Heidkaemper\\ImportImageMetadata\\": "src"
