--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,13 @@
         "statamic/cms": "~3.3"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.13",
+        "friendsofphp/php-cs-fixer": "^3.14",
         "phpunit/phpunit": "^9.5",
         "orchestra/testbench": "^7.16"
     },
     "scripts": {
-        "phpcs": "vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.php --allow-risky=\"yes\" --dry-run --verbose --diff",
-        "phpcs-fix": "vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.php --allow-risky=\"yes\"",
+        "phpcs": "vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.php --allow-risky=yes --dry-run --verbose --diff",
+        "phpcs:fix": "vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.php --allow-risky=yes",
         "test": "vendor/bin/phpunit"
     },
     "autoload": {
