--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,9 @@
         "statamic/cms": "^4.0 || ^5.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.14",
         "orchestra/testbench": "^9.0",
-        "pestphp/pest": "^2.34"
+        "pestphp/pest": "^2.34",
+        "laravel/pint": "^1.15"
     },
     "autoload": {
         "psr-4": {
@@ -22,8 +22,8 @@
         }
     },
     "scripts": {
-        "phpcs": "vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.php --allow-risky=yes --dry-run --verbose --diff",
-        "phpcs:fix": "vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.php --allow-risky=yes",
+        "phpcs": "vendor/bin/pint -v --test",
+        "phpcs:fix": "vendor/bin/pint",
         "test": "vendor/bin/pest"
     },
     "extra": {
